--- a/ccs/style.css
+++ b/ccs/style.css
@@ -94,7 +94,7 @@ h2{
 
 }
 
-@media( max-width: 1280) and (min-width: 800px) {
+@media( max-width: 1280px) and (min-width: 800px) {
     body{
         background-color: red;
     }
